01 - OpenCRVS Documentation/v1.3/setup/3.-installation/3.2-set-up-your-own-country-configuration/3.2.5-set-up-application-settings.md
---
title: "3.2.5 Set up application settings"
source_url: "https://documentation.opencrvs.org/v1.3/setup/3.-installation/3.2-set-up-your-own-country-configuration/3.2.5-set-up-application-settings"
markdown_url: "https://documentation.opencrvs.org/v1.3/setup/3.-installation/3.2-set-up-your-own-country-configuration/3.2.5-set-up-application-settings.md"
version: "v1.3"
retrieved_at: "2026-09-16T15:06:42Z"
content_hash: "sha256:c07fc201a724f3fc272eb59c6c52252516ee8937a86926cc8ac7a7ba6994964c"
---

> For the complete documentation index, see [llms.txt](https://documentation.opencrvs.org/llms.txt). Markdown versions of documentation pages are available by appending `.md` to page URLs; this page is available as [Markdown](https://documentation.opencrvs.org/v1.3/setup/3.-installation/3.2-set-up-your-own-country-configuration/3.2.5-set-up-application-settings.md).

# 3.2.5 Set up application settings

The next step is to configure some functional application settings. Some of these settings can be changed later using the OpenCRVS [Functional Configuration](https://github.com/opencrvs/documentation/blob/release-v1.3.0/setup/4.-functional-configuration) UI by a National System Administrator. Others must be configured now during installation and cannot be changed in production.

You will be referring to the Config: Application Settings Excel sheet that would have been prepared in [section 2: Gather requirements](/v1.3/setup/2.-gather-requirements.md).

## 1. Prepare global functional settings

Prepare your ***application-config-default.ts*** source file. This is a Typescript file that is loaded in the application via an API explained in [section 3.2.9 Countryconfig APIs explained](https://github.com/opencrvs/documentation/blob/release-v1.3.0/setup/3.-installation/3.2-set-up-your-own-country-configuration/3.2.9-countryconfig-apis-explained).

Using our [application-config-default.ts](https://github.com/opencrvs/opencrvs-countryconfig/blob/develop/src/api/application/application-config-default.ts) file as an example, update the settings according to your needs.&#x20;

<table><thead><tr><th>Parameter</th><th>Description</th></tr></thead><tbody><tr><td><pre><code><strong>APPLICATION_NAME
</strong></code></pre></td><td>You can call your instance of OpenCRVS anything you like, such as "Farajaland CR"</td></tr><tr><td><pre><code>BIRTH: {
    REGISTRATION_TARGET: 30,
    LATE_REGISTRATION_TARGET: 365,
    FEE: {
      ON_TIME: 0,
      LATE: 5.5,
      DELAYED: 15
    },
    PRINT_IN_ADVANCE: true
  }
</code></pre></td><td>These are your registration time periods and fees for <strong>birth</strong>, explained in more detail <a href="/v1.3/setup/4.-functional-configuration/4.2-configure-registration-periods-and-fees.md">here</a>.  PRINT_IN_ADVANCE allows you to print  certificates in advance for collection.  You can disable this by setting it to false, if you operationally want to enforce an ID check from a recipient before printing a copy.</td></tr><tr><td><pre><code>DEATH: {
    REGISTRATION_TARGET: 45,
    FEE: {
      ON_TIME: 0,
      DELAYED: 0
    },
    PRINT_IN_ADVANCE: true
  }
</code></pre></td><td>These are your registration time periods and fees for <strong>death</strong>, explained in more detail <a href="/v1.3/setup/4.-functional-configuration/4.2-configure-registration-periods-and-fees.md">here</a>.  PRINT_IN_ADVANCE allows you to print  certificates in advance for collection.  You can disable this by setting it to false, if you operationally want to enforce an ID check from a recipient before printing a copy.</td></tr><tr><td><pre><code>MARRIAGE_REGISTRATION
</code></pre></td><td><strong>This cannot be amended later in the UI and must be configured here.</strong> In OpenCRVS v1.3 we have released marriage registration in BETA.  Set this property to true in order to demonstrate marriage registration as a proof of concept.  Get in touch with us at <a href="mailto:team@opencrvs.org">team@opencrvs.org</a> if you wish to use marriage registration in production.  We require to complete marriage performance analytics and searching in order to release this feature in OpenCRVS v1.4.  <strong>It is not yet production ready.</strong> </td></tr><tr><td><pre><code>MARRIAGE: {
    REGISTRATION_TARGET: 45,
    FEE: {
      ON_TIME: 10,
      DELAYED: 45
    },
    PRINT_IN_ADVANCE: true
  }
</code></pre></td><td>These are your registration time periods and fees for <strong>marriage</strong>, explained in more detail <a href="/v1.3/setup/4.-functional-configuration/4.2-configure-registration-periods-and-fees.md">here</a>.  PRINT_IN_ADVANCE allows you to print  certificates in advance for collection.  You can disable this by setting it to false, if you operationally want to enforce an ID check from a recipient before printing a copy.</td></tr><tr><td><pre><code>DATE_OF_BIRTH_UNKNOWN
</code></pre></td><td><strong>This cannot be amended later in the UI and must be configured here.</strong>  In some countries, individuals do not know their date of birth.  If you wish to enable that individuals are allowed to submit their ages in your declaration forms rather than a date of birth, set this to true.  <strong>Please note that those individuals will have their days and months of birth automatically set to the 1st January in the system in that case.</strong></td></tr><tr><td><pre><code>CURRENCY: {
    languagesAndCountry: ['en-US'],
    isoCode: 'USD'
  }

</code></pre></td><td>Fees due for collection and correction of certificates are calculated and displayed according to this value.</td></tr><tr><td><pre><code>PHONE\_NUMBER\_PATTERN </code></pre></td><td>This is a regular expression to evaluate if a supplied phone number minus country code is valid.</td></tr><tr><td><pre><code>NID\_NUMBER\_PATTERN </code></pre></td><td>If you configure your form to include a field to capture a user's National ID number, then this regular expression can evaluate if the string is valid.</td></tr><tr><td><pre><code>COUNTRY\_LOGO </code></pre></td><td>You can always use our Farajaland logo by default and then upload this in the UI later, but if you look at the top of the file, you can see that this refers to a property that imports a copy of your country logo as a base64 image.  Do not change this property but instead, locate your official logo/crest, convert it to base64 and you can replace our logo \[here]\(<a href="https://github.com/opencrvs/opencrvs-countryconfig/blob/develop/src/api/application/country-logo.ts"><https://github.com/opencrvs/opencrvs-countryconfig/blob/develop/src/api/application/country-logo.ts></a>).</td></tr><tr><td><pre><code>LOGIN\_BACKGROUND: {
backgroundColor: '36304E'
} </code></pre></td><td>You can set the background of the login page to be a color of choice.  You can always use the UI to change this color later, or use a tiled or full screen image.</td></tr><tr><td><pre><code>INFORMANT\_SIGNATURE </code></pre></td><td><strong>This cannot be amended later in the UI and must be configured here.</strong> In some countries, the informant is required to sign the birth and death registration forms.  In other countries uploads of supporting documentation is all that is required.  Should you want the option for the informant to sign the birth and death form on the review page, set this to true.</td></tr><tr><td><pre><code>INFORMANT\_SIGNATURE\_REQUIRED </code></pre></td><td><strong>This cannot be amended later in the UI and must be configured here.</strong>  Should you wish to make the informant signature for birth and death described above a <strong>required</strong> field, set this to true.</td></tr><tr><td><pre><code>FIELD\_AGENT\_AUDIT\_LOCATIONS </code></pre></td><td><strong>This cannot be amended later in the UI and must be configured here.</strong> In application performance analytics, you can set the administrative level that you wish to aggregate field agent performance.  We recommend that you leave this as DISTRICT as it refers to the FHIR "district" location level as opposed to your internal country name for location level 2.  If your country is very small and has only 1 location level, set this to STATE.</td></tr><tr><td><pre><code>DECLARATION\_AUDIT\_LOCATIONS </code></pre></td><td><strong>This cannot be amended later in the UI and must be configured here.</strong> In application performance analytics, you can set the administrative level that you wish to aggregate field agent declaration completeness performance.  We recommend that you leave this as DISTRICT as it refers to the FHIR "district" location level as opposed to your internal country name for location level 2.  If your country is very small and has only 1 location level, set this to STATE.</td></tr><tr><td><pre><code>USER\_NOTIFICATION\_DELIVERY\_METHOD </code></pre></td><td><strong>This cannot be amended later in the UI and must be configured here.</strong> If you are using SMS or WhatsApp to send notifications to <strong>staff</strong>, set this to "sms".  If you are using email, set this to "email"</td></tr><tr><td><pre><code>INFORMANT\_NOTIFICATION\_DELIVERY\_METHOD </code></pre></td><td><strong>This cannot be amended later in the UI and must be configured here.</strong> If you are using SMS or WhatsApp to send notifications to <strong>informants</strong>, set this to "sms".  If you are using email, set this to "email"</td></tr><tr><td><pre><code>EXTERNAL\_VALIDATION\_WORKQUEUE </code></pre></td><td><strong>This cannot be amended later in the UI and must be configured here.</strong> This field should be left as <strong>false</strong>.  It is a custom property allowing a country to pause the registration process at the point of registration for 3rd party asynchronous validation.  If you wish to use this property please get in touch with us at<a href="mailto:team@opencrvs.org"> <team@opencrvs.org></a>. <strong>It is a legacy property that will likely be deprecated in OpenCRVS v1.4 due to relative underuse.</strong></td></tr><tr><td><pre><code>export const COUNTRY\_WIDE\_CRUDE\_DEATH\_RATE = 10 </code></pre></td><td><strong>This cannot be amended later in the UI and must be configured here.</strong> You will notice this separate property used by an API handler called by our analytics services.  Whereas countries generally have crude birth rate ratios per area in their stastics, they tend to have a country-wide crude death rate.  You can set this here in order to correctly calculate death registration completeness rates.</td></tr></tbody></table>

## 2. Prepare javascript initialisation settings

The OpenCRVS Core Login application loads the following config js files before connecting to the OpenCRVS backend to serve all the content.  The Login app has not communicated with the backend yet and needs to know how to access it

**Login app - localhost development:** [**login-config.js**](https://github.com/opencrvs/opencrvs-countryconfig/blob/develop/src/login-config.js)

```
window.config = {
  AUTH_API_URL: 'http://localhost:4040/',
  CONFIG_API_URL: 'http://localhost:2021',
  // Country code in uppercase ALPHA-3 format
  COUNTRY: 'FAR',
  LANGUAGES: 'en,fr',
  AVAILABLE_LANGUAGES_SELECT: 'en:English,fr:Français',
  CLIENT_APP_URL: 'http://localhost:3000/',
  COUNTRY_CONFIG_URL: 'http://localhost:3040',
  SENTRY: '',
  LOGROCKET: ''
}
```

As you can see, the React Login application uses the URL values to understand how to connect to backend services such as the login authentication API and the country configuration API.   **Do not edit the URLs.**&#x20;

**You must set some values**:

**COUNTRY**: Set the [Alpha 3 country code](https://www.iban.com/country-codes) to be the same as the value you used when importing the set up files in step 3.2.5. The Login app needs to convert users phone numbers into MSISDN numbers using an Alpha 3 country code in case the user forgets their login details and requires an SMS reset.

**LANGUAGES:** This property allows you to customise the global language options. This value is a comma separated string of [ISO 639-1](https://en.wikipedia.org/wiki/List_of_ISO_639-1_codes) language codes for every translation you wish to set up in step [3.2.9.1 Managing language content](/v1.3/setup/3.-installation/3.2-set-up-your-own-country-configuration/3.2.9-countryconfig-apis-explained/3.2.9.1-managing-language-content.md).

For example, if you wanted to support Spanish and English, with Spanish being the default this string should be:

```
es,en
```

**AVAILABLE\_LANGUAGES\_SELECT:** The app needs to populate available languages in a language select before it has had a chance to load any language content. This property allows you to customise the **options** & **labels** in the select. This value is a comma separated string of the following:

a) Firstly the [ISO 639-1](https://en.wikipedia.org/wiki/List_of_ISO_639-1_codes) language code for a single translation you have set up in step 3.2.7 Set-up language content followed by a colon.

b) After the colon, the displayName for the language.

For example, if you wanted to support Spanish and English, with Spanish being the default this string should be:

```
es:Español,en:English
```

The application can log errors to Sentry should it encounter any problems accessing the backend.  *LOGROCKET will be deprecated in OpenCRVS v1.4.*  Leave these options alone as empty strings as they are not used when running in localhost. They are populated dynamically from Github secrets in the server [deploy step here](/v1.3/setup/3.-installation/3.3-set-up-a-server-hosted-environment/3.3.6-deploy-automated-and-manual.md).

**Login app - server:** [**login-config.prod.js**](https://github.com/opencrvs/opencrvs-countryconfig/blob/develop/src/login-config.prod.js)

```
window.config = {
  AUTH_API_URL: 'https://auth.{{hostname}}/',
  CONFIG_API_URL: 'https://config.{{hostname}}',
  // Country code in uppercase ALPHA-3 format
  COUNTRY: 'FAR',
  LANGUAGES: 'en,fr',
  AVAILABLE_LANGUAGES_SELECT: 'en:English,fr:Français',
  CLIENT_APP_URL: 'https://register.{{hostname}}/',
  COUNTRY_CONFIG_URL: 'https://countryconfig.{{hostname}}',
  SENTRY: '{{sentry}}',
  LOGROCKET: ''
}
```

As you ca**n see, the server config file contains the same settings.**

You may notice that localhost is replaced by your domain name dynamically in handlebars. **Do not edit the URLs.** We have taken care of this substitution for you in step [3.3.6 Deploy](/v1.3/setup/3.-installation/3.3-set-up-a-server-hosted-environment/3.3.6-deploy-automated-and-manual.md)

You must set the **COUNTRY, LANGUAGES & AVAILABLE\_LANGUAGES\_SELECT** values only.

**Client app - localhost development:** [**client-config.js**](https://github.com/opencrvs/opencrvs-countryconfig/blob/develop/src/client-config.js)

```
window.config = {
  API_GATEWAY_URL: 'http://localhost:7070/',
  CONFIG_API_URL: 'http://localhost:2021',
  LOGIN_URL: 'http://localhost:3020',
  AUTH_URL: 'http://localhost:4040',
  MINIO_BUCKET: 'ocrvs',
  COUNTRY_CONFIG_URL: 'http://localhost:3040',
  // Country code in uppercase ALPHA-3 format
  COUNTRY: 'FAR',
  AVAILABLE_LANGUAGES_SELECT: 'en:English,fr:Français',
  LANGUAGES: 'en,fr',
  SENTRY: '',
  LOGROCKET: '',
  // Use the values in comments when Metabase is running locally
  // http://localhost:4444/public/dashboard/acae0527-74be-4804-a3ee-f8b3c9c8784c#bordered=false&titled=false&refresh=300
  LEADERBOARDS_DASHBOARD_URL: '',
  // http://localhost:4444/public/dashboard/fec78656-e4f9-4b51-b540-0fed81dbd821#bordered=false&titled=false&refresh=300
  REGISTRATIONS_DASHBOARD_URL: '',
  // http://localhost:4444/public/dashboard/a17e9bc0-15a2-4bd1-92fa-ab0f346227ca#bordered=false&titled=false&refresh=300
  STATISTICS_DASHBOARD_URL: ''
}
```

Following the same process as you did for the local development Login app config file, you must set the **COUNTRY, LANGUAGES & AVAILABLE\_LANGUAGES\_SELECT** values, and can optionally uncomment **LEADERBOARDS\_DASHBOARD\_URL, REGISTRATIONS\_DASHBOARD\_URL** and **STATISTICS\_DASHBOARD\_URL** if you wish to run metabase dashboards locally.  Refer to step [3.2.5.1 Configuring Metabase Dashboards](/v1.3/setup/3.-installation/3.2-set-up-your-own-country-configuration/3.2.5-set-up-application-settings/3.2.5.1-configuring-metabase-dashboards.md) for more instructions.

**Client app - server:** [**client-config.prod.js**](https://github.com/opencrvs/opencrvs-countryconfig/blob/develop/src/client-config.prod.js)

```
window.config = {
  API_GATEWAY_URL: 'https://gateway.{{hostname}}/',
  CONFIG_API_URL: 'https://config.{{hostname}}',
  LOGIN_URL: 'https://login.{{hostname}}',
  AUTH_URL: 'https://auth.{{hostname}}',
  MINIO_BUCKET: 'ocrvs',
  COUNTRY_CONFIG_URL: 'https://countryconfig.{{hostname}}',
  // Country code in uppercase ALPHA-3 format
  COUNTRY: 'FAR',
  AVAILABLE_LANGUAGES_SELECT: 'en:English,fr:Français',
  LANGUAGES: 'en,fr',
  SENTRY: '{{sentry}}',
  LOGROCKET: '',
  LEADERBOARDS_DASHBOARD_URL:
    'https://metabase.{{hostname}}/public/dashboard/acae0527-74be-4804-a3ee-f8b3c9c8784c#bordered=false&titled=false&refresh=300',
  REGISTRATIONS_DASHBOARD_URL:
    'https://metabase.{{hostname}}/public/dashboard/fec78656-e4f9-4b51-b540-0fed81dbd821#bordered=false&titled=false&refresh=300',
  STATISTICS_DASHBOARD_URL:
    'https://metabase.{{hostname}}/public/dashboard/a17e9bc0-15a2-4bd1-92fa-ab0f346227ca#bordered=false&titled=false&refresh=300'
}
```

Following the same process as you did for the production Login app config file, you must set the **COUNTRY, LANGUAGES & AVAILABLE\_LANGUAGES\_SELECT** values.


---

# Agent Instructions
This documentation is published with GitBook. GitBook is the documentation platform designed so that both humans and AI agents can read, navigate, and reason over technical content effectively. Learn more at gitbook.com.

## Querying This Documentation
If you need additional information that is not directly available in this page, you can query the documentation dynamically by asking a question.

Perform an HTTP GET request on the current page URL with the `ask` query parameter, and the optional `goal` query parameter:

```
GET https://documentation.opencrvs.org/v1.3/setup/3.-installation/3.2-set-up-your-own-country-configuration/3.2.5-set-up-application-settings.md?ask=<question>&goal=<endgoal>
```

`ask` is the immediate question: it should be specific, self-contained, and written in natural language.
`goal` is optional and describes the broader end goal you are ultimately trying to accomplish on behalf of the user. GitBook uses it to tailor the answer towards what is most useful for that goal.

The response will contain a direct answer to the question and relevant excerpts and sources from the documentation.

Use this mechanism when the answer is not explicitly present in the current page, you need clarification or additional context, or you want to retrieve related documentation sections.
